# cognito

./: .gitignore  Makefile  README.md
backend/: .gitignore  Dockerfile  SYSTEM_PROMPT.md  agent.py  cloudbuild.yaml  db.py  envelope.py  flow.py  interceptor.py  main.py  pyproject.toml  test_agent.py
backend/core/: config.py  db.py  live_defaults.py  session.py  utils.py
backend/domains/agents/: __init__.py  declarations.py  handlers.py  module.py  runtime.py
backend/domains/agents/prompts/: system.md
backend/domains/agents/subagents/: __init__.py  search.py
backend/domains/analogy/: __init__.py  module.py
backend/domains/live_session/: __init__.py  context.py  envelope.py  events.py  module.py
backend/domains/memory/: repository.py
backend/domains/mentor/: __init__.py  module.py  repository.py
backend/routers/: generate.py  live.py  memory.py  session.py
backend/schemas/: generate.py  live.py
backend/scripts/: adk_patch.py
backend/services/: live_events.py
backend/tests/: test_analogy_quiz_flow.py  test_retry.py
backend/tools/: handlers.py  registry.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend-v2/: .gitignore  index.html  package-lock.json  package.json
frontend-v2/src/: App.envelopes.test.tsx  App.tsx  Brutalist.css  api.ts  index.css  types.ts
frontend-v2/src/hooks/: use-live-api.ts
frontend-v2/src/lib/: genai-live-client.ts
frontend/src/: App.envelopes.test.tsx  App.tsx  Brutalist.css  main.tsx
frontend/src/contexts/: LiveAPIContext.tsx
scripts/: dev.sh
(+28 files in other folders)
